Fix related media spacing, broken by ce10e61f9865c85dfe5f3d908c8acad99ac1c852

--- a/mediacore/public/styles/base.css
+++ b/mediacore/public/styles/base.css
@@ -492,8 +492,13 @@ a:focus .grid-title {
 }
 .contextbox + .contextbox h3 {
 	border-top: 1px solid #cdd2d5;
-	margin-bottom: 5px;
 	padding-top: 11px;
+	margin-bottom: 5px;
+}
+#media-context.contextbox h3 {
+	border-top: 0;
+	padding-top: 0;
+	margin-bottom: 10px;
 }
 
 /* Media Library */
